--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -21,7 +21,7 @@ Set comments font style to normal
 // Font options
 .editor {
   -webkit-font-smoothing: subpixel-antialiased;
-  font-weight: normal;
+  font-weight: bold;
   // Experimental
   text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
   text-rendering: optimizeLegibility !important;
