--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -4,13 +4,25 @@
  *
  */
 
+ @import "syntax-variables";
+ @import "ui-variables";
+
 html, body { font-size: 11px; }
 
 Set comments font style to normal
 .editor, atom-text-editor::shadow {
+
   .comment {
     font-style: normal;
   }
+
+  // makes the cursor pulse
+  .cursor {
+    transition: opacity 0.5s;
+    border: 1px solid;
+    background-color: rgba(255,255,255,1);
+  }
+
 }
 
 // Change line padding for readability
@@ -26,4 +38,7 @@ Set comments font style to normal
   text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
   text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: antialiased !important;
+  .invisible-character {
+      opacity: .5;
+  }
 }
